[package]
name = "dss-project"
version = "0.1.0"
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
image = "0.23.12"
tokio = "1.12.0"
serde = "1.0.130"
serde_derive = "*"
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["serde"] }
mimalloc = "0.1.22"
reqwest = { version = "0.11", features = ["blocking", "json"] }
gfx = "0.18.2"
gfx-hal = "0.9"
gfx-auxil = "0.10"
gfx-backend-empty = "0.9"
winit = "0.25.0"

[dependencies.gfx-backend-vulkan]
version = "0.9"
optional = true

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.gfx-backend-gl]
version = "0.9"
features = ["cross"]
optional = true

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
version = "0.9"
optional = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.gfx-backend-metal]
features = ["cross"]
version = "0.9"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.9"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.9"
optional = true