[package]
name = "streaming-home"
version = "0.1.0"
edition = "2018"
resolver = "2"

[features]
default = []

[dependencies]
env_logger = "0.9"
log = "0.4"
image = "0.23.12"
tokio = "1.12.0"
serde = "1.0.130"
serde_derive = "*"
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["serde"] }
mimalloc = "0.1.22"
reqwest = { version = "0.11", features = ["blocking", "json"] }
wgpu = "0.10"
winit = "0.25.0"
