[package]
name = "dss"
version = "0.1.0"
edition = "2018"
resolver = "2"

[features]
default = []

[dependencies]
env_logger = "0.9"
log = "0.4"
image = "0.23.12"
tokio = { version = "1.12.0", features = ["full"] }
serde = "1.0.130"
serde_derive = "*"
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["serde"] }
mimalloc = "0.1.22"
reqwest = { version = "0.11", features = ["blocking", "json"] }
wgpu = "0.11"
winit = "0.25.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
glam = { version = "0.19.0", features = ["bytemuck"] }
rectangle-pack = "0.4.2"
flume = "0.10.9"
futures-util = "0.3.17"
bytes = "1.1.0"